--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,12 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
+
+    implementation 'org.postgresql:postgresql:42.3.3'
+
+    implementation 'io.github.cdimascio:dotenv-java:2.2.3'
+
+    implementation 'commons-dbutils:commons-dbutils:1.7'
 }
 
 application {
