--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     // Use JUnit 4 for testing.
     testImplementation 'junit:junit:4.13'
 
+    // Use Cucumber for testing
+    testImplementation 'io.cucumber:cucumber-java:6.8.1'
+    testImplementation 'io.cucumber:cucumber-junit:6.8.1'
+
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
 
