--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     // Use Cucumber for testing
     testImplementation 'io.cucumber:cucumber-java:6.8.1'
     testImplementation 'io.cucumber:cucumber-junit:6.8.1'
+    testImplementation 'org.mockito:mockito-core:4.3.1'
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
@@ -41,6 +42,7 @@ dependencies {
     implementation 'io.github.cdimascio:dotenv-java:2.2.3'
 
     implementation 'commons-dbutils:commons-dbutils:1.7'
+
 }
 
 application {
